# WizardEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Editor/: CMakeLists.txt
Editor/src/: EditorLayer.cpp  EditorLayer.h  ImGuiD3D12.cpp  ImGuiD3D12.h  TestController.h  WZEditor.cpp
Editor/src/Panels/: ComponentPanel.cpp  ComponentPanel.h
Engine/: CMakeLists.txt
Engine/assets/shaders/: cube.ps  cube.vs  flatps.hlsl  flatvs.hlsl
Engine/src/: Core.h  EntryPoint.h  Wizard.h  wzpch.h
Engine/src/Core/: Application.cpp  Application.h  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Window.cpp  Window.h
Engine/src/Events/: ApplicationEvents.h  Event.h  Events.h  MouseEvents.h
Engine/src/Platform/: WindowsInput.cpp
Engine/src/Renderer/: Buffer.cpp  Buffer.h  ConstantBuffer.h  IndexBuffer.cpp  IndexBuffer.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  PerspectiveCamera.cpp  PerspectiveCamera.h  RenderCommand.h  RenderPipelineState.cpp  RenderPipelineState.h  RenderTool.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  SurfaceHelper.mm  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShader.cpp  VulkanShader.h
Engine/src/Scene/: Components.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h  ScriptingEntity.h
Engine/src/Wizard/: Application.cpp  Application.h
Engine/utils/: compile_shader.sh
Sandbox/: CMakeLists.txt  CmakeLists.txt
Sandbox/assets/shaders/: flatps.hlsl  flatvs.hlsl
Sandbox/src/: Example2D.cpp  Example2D.h  Example3D.cpp  Example3D.h  Sandbox.cpp
assets/: imgui.ini
assets/scenes/: example.wizard
assets/shaders/: quad_ps.hlsl  quad_vs.hlsl  textureps.hlsl
